# blockWalker

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
include/Application/: App.h  AppConfig.h
include/Core/: Common.h  InitializationFailureException.h
main/: main.vcxproj  main.vcxproj.filters  premake5.lua
main/cpp/: glad.c  main.cpp
main/include/: myheader.h
main/include/glad/: glad.h
main/lib/: glfw3.lib  spdlog.lib
src/Application/: App.cpp  AppConfig.cpp  main.cpp
src/Core/: InitializationFailureException.cpp
